# EdgeDevX

./: .gitignore  .gitmodules  .stats_timestamp  CMakeLists.txt  README.md
include/: dx_async.h  dx_avnet_iot_connect.h  dx_azure_iot.h  dx_config.h  dx_device_twins.h  dx_direct_methods.h  dx_exit_codes.h  dx_gpio.h  dx_i2c.h  dx_json_serializer.h  dx_openai_functions.h  dx_pwm.h  dx_terminate.h  dx_timer.h  dx_utilities.h  dx_version.h  rx_gpio.h
include/applibs/: log.h
src/: dx_async.c  dx_avnet_iot_connect.c  dx_azure_iot.c  dx_config.c  dx_device_twins.c  dx_direct_methods.c  dx_gpio.c  dx_i2c.c  dx_json_serializer.c  dx_openai_functions.c  dx_pwm.c  dx_terminate.c  dx_timer.c  dx_utilities.c  log.c  parson.c  rx_gpio.c
